Fix scroll jump on modal close

--- a/src/client/styles/components/_modal.scss
+++ b/src/client/styles/components/_modal.scss
@@ -17,6 +17,7 @@
   background: rgba(0,0,0,0.6);
   opacity: 0;
   pointer-events: none;
+  overflow-y: hidden;
 
   transition: opacity 200ms ease;
 }
